# ecrivez

./: ARCHITECTURE.md  EXPLORATION.md  NEXT_STEPS.md  OpenCode.md  PROJECT_EXPLORATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  _quarto.yml  ecrivez  ecrivez.html  ecrivez.qmd  pyproject.toml  pytest.ini
.opencode/: opencode.db  opencode.db-shm  opencode.db-wal
dev/: fzfdocs.txt  project-structure-and-critiques.md  smolagents-docs.txt
ecrivez_files/libs/bootstrap/: bootstrap-809b73a8717e828178572bf64ca49ee4.min.css
src/ecrivez/: __main__.py  chat.py  cli.py  config.py  editor.py  nvim_api.py  project.py
src/ecrivez/config/: agents.py  config.py  general.py  paths.py  secrets.py  tools.py
src/ecrivez/resources/templates/: session-template.jsonld
src/ecrivez/tools/: __init__.py
src/ecrivez/ui/: generate_graph.py  qt_interface.py
tests/: test_chat_provider.py  test_config_init.py  test_config_validation.py  test_echo_provider.py  test_json_tool_invocation.py  test_nvim_apply.py  test_tools.py
