[project]
name = "ecrivez"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matias Ceau", email = "matias@ceau.net" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "ipykernel>=6.29.5",
    "ipython>=8.30.0",
    "libtmux>=0.39.0",
    "mypy>=1.15.0",
    "pip>=25.0",
    "pydantic>=2.10.6",
    "pynvim>=0.5.2",
    "pyqt6>=6.8.1",
    "pyqt6-webengine>=6.8.0",
    "pyyaml>=6.0.2",
    "smolagents>=1.8.0",
    "xdg>=6.0.0",
]

[project.scripts]
ecrivez = "ecrivez:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
